--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,10 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Raleway:ital,wght@0,100;0,200;0,400;0,600;0,700;0,900;1,200;1,400&family=Roboto:wght@400;700;900&display=swap"
     rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Raleway:ital,wght@0,100;0,200;0,400;0,600;0,700;0,900;1,200;1,400&family=Roboto:wght@400;700;900&family=Square+Peg&display=swap" rel="stylesheet">
   <title>React App</title>
 </head>
 
